--- a/src/main/webapp/static/css/index/carousel.css
+++ b/src/main/webapp/static/css/index/carousel.css
@@ -113,3 +113,26 @@ body {
     margin-top: 120px;
   }
 }
+
+
+
+.service-type-box {
+  position: absolute;top: 90px;
+  left: 30px;
+  width: 520px;
+  height: 380px;
+  background-color: #fff;
+}
+  .nav-tabs>li>a {
+    color: #333;
+    border-radius: 0;
+  }
+  .nav-tabs > li > a:hover {
+    color: #009a61;
+    border-top: 2px #009a61 solid;
+    background-color: transparent;
+  }
+  .nav-tabs>li.active>a, .nav-tabs>li.active>a:focus, .nav-tabs>li.active>a:hover {
+    color: #009a61;
+    border-top: 2px #009a61 solid;
+  }
