--- a/src/main/webapp/static/css/common.css
+++ b/src/main/webapp/static/css/common.css
@@ -1,9 +1,33 @@
-body,
-.navbar-static-top {
-    min-width: 970px;
+body{
+    padding-bottom: 40px;
+    color: #5a5a5a;
 }
+
+/* CUSTOMIZE THE NAVBAR
+-------------------------------------------------- */
+
+/* Special class on .container surrounding .navbar, used for positioning it into place. */
+.navbar-wrapper {
+    position: absolute;
+    top: 0;
+    right: 0;
+    left: 0;
+    z-index: 20;
+}
+
+/* Flip around the padding for proper display in narrow viewports */
+.navbar-wrapper > .container {
+    padding-right: 0;
+    padding-left: 0;
+    width: auto;
+}
+
+.navbar-wrapper .navbar .container {
+    width: auto;
+}
+
 .container {
-    width: 970px;
+    width: 1200px;
     max-width: none !important;
 }
 .container .navbar-header,
@@ -71,12 +95,12 @@ body,
 /*nav*/
 .dropdown-menu > li > a:hover,
 .dropdown-menu > li > a:focus {
-  color: #009a61;
+  color: #5cb85c;
   text-decoration: none;
   background-color: transparent;
 }
 .navbar-default {
-  border-top: 3px solid #009a61;
+  border-top: 3px solid #5cb85c;
   box-shadow: 0px 2px 10px 0px rgba(0,0,0,0.1), 0 1px rgba(0,0,0,0.1);
   background: #fafafa;
 }
@@ -87,7 +111,7 @@ body,
 }
 .navbar-default .navbar-brand:hover,
 .navbar-default .navbar-brand:focus {
-  color: #009a61;
+  color: #5cb85c;
   background-color: transparent;
 }
 .navbar-default .navbar-text {
@@ -98,13 +122,13 @@ body,
 }
 .navbar-default .navbar-nav > li > a:hover,
 .navbar-default .navbar-nav > li > a:focus {
-  color: #009a61;
+  color: #5cb85c;
   background-color: transparent;
 }
 .navbar-default .navbar-nav > .active > a,
 .navbar-default .navbar-nav > .active > a:hover,
 .navbar-default .navbar-nav > .active > a:focus {
-  color: #009a61;
+  color: #5cb85c;
   background-color: transparent;
 }
 .navbar-default .navbar-nav > .disabled > a,
@@ -118,7 +142,7 @@ body,
 }
 .navbar-default .navbar-toggle:hover,
 .navbar-default .navbar-toggle:focus {
-  background-color: #009a61;
+  background-color: #5cb85c;
 }
 .navbar-default .navbar-toggle .icon-bar {
   background-color: #888;
@@ -130,7 +154,7 @@ body,
 .navbar-default .navbar-nav > .open > a,
 .navbar-default .navbar-nav > .open > a:hover,
 .navbar-default .navbar-nav > .open > a:focus {
-  color: #009a61;
+  color: #5cb85c;
   background-color: transparent;
 }
 @media (max-width: 767px) {
@@ -139,18 +163,18 @@ body,
   }
   .navbar-default .navbar-nav .open .dropdown-menu > li > a:hover,
   .navbar-default .navbar-nav .open .dropdown-menu > li > a:focus {
-    color: #009a61;
+    color: #5cb85c;
     background-color: transparent;
   }
   .navbar-default .navbar-nav .open .dropdown-menu > .active > a,
   .navbar-default .navbar-nav .open .dropdown-menu > .active > a:hover,
   .navbar-default .navbar-nav .open .dropdown-menu > .active > a:focus {
-    color: #009a61;
+    color: #5cb85c;
   }
   .navbar-default .navbar-nav .open .dropdown-menu > .disabled > a,
   .navbar-default .navbar-nav .open .dropdown-menu > .disabled > a:hover,
   .navbar-default .navbar-nav .open .dropdown-menu > .disabled > a:focus {
-    color: #009a61;
+    color: #5cb85c;
     background-color: transparent;
   }
 }
@@ -158,20 +182,20 @@ body,
   color: #777;
 }
 .navbar-default .navbar-link:hover {
-  color: #009a61;
+  color: #5cb85c;
 }
 .navbar-default .btn-link {
   color: #777;
 }
 .navbar-default .btn-link:hover,
 .navbar-default .btn-link:focus {
-  color: #009a61;
+  color: #5cb85c;
 }
 .navbar-default .btn-link[disabled]:hover,
 fieldset[disabled] .navbar-default .btn-link:hover,
 .navbar-default .btn-link[disabled]:focus,
 fieldset[disabled] .navbar-default .btn-link:focus {
-  color: #009a61;
+  color: #5cb85c;
 }
 
 
@@ -179,9 +203,9 @@ fieldset[disabled] .navbar-default .btn-link:focus {
     width: 12px;
     height: 12px;
     margin: 0;
-    background-color: #009a61;
+    background-color: #5cb85c;
 }
 
 .carousel-indicators li {
-    border: 1px solid #009a61;
+    border: 1px solid #5cb85c;
 }
