--- a/src/main/webapp/static/css/index.css
+++ b/src/main/webapp/static/css/index.css
@@ -111,8 +111,10 @@
   }
 
   .service-type-box .order-item-checkbox{
-    width: 80px;
+    width: 89px;
     display: inline-block;
+    text-align: left;
+    margin-left: 10px;
   }
 
   .service-type-box .order-item-checkbox label{
