--- a/src/main/webapp/static/css/vehicleList.css
+++ b/src/main/webapp/static/css/vehicleList.css
@@ -1,6 +1,6 @@
 .vehicle-list-order-info{
     height: 100px;
-    border: 1px #5cb85c solid;
+    border: 1px #1F87E8 solid;
     margin-top: 20px;
 }
 
@@ -17,7 +17,7 @@
     height: 200px;
 }
 .vehicle-list-lbs{
-    border: 1px #5cb85c solid;
+    border: 1px #1F87E8 solid;
     height: 400px;
     padding: 0px;
     margin-top: 20px;
