--- a/src/main/webapp/static/css/common.css
+++ b/src/main/webapp/static/css/common.css
@@ -102,24 +102,26 @@ footer{
 /*nav*/
 .dropdown-menu > li > a:hover,
 .dropdown-menu > li > a:focus {
-  color: #5cb85c;
+  color: #1F87E8;
   text-decoration: none;
   background-color: transparent;
 }
 .navbar-default {
-  border-top: 3px solid #5cb85c;
+  border-top: 3px solid #1F87E8;
   box-shadow: 0px 2px 10px 0px rgba(0,0,0,0.1), 0 1px rgba(0,0,0,0.1);
   background: #fafafa;
 }
 .navbar-default .navbar-brand {
-  color: #5cb85c;
+  color: #1F87E8;
   width: 300px;
   text-align: center;
   font-weight: bold;
+  font-size: 35px;
+  font-style: italic;
 }
 .navbar-default .navbar-brand:hover,
 .navbar-default .navbar-brand:focus {
-  color: #5cb85c;
+  color: #1F87E8;
   background-color: transparent;
 }
 .navbar-default .navbar-text {
@@ -130,13 +132,13 @@ footer{
 }
 .navbar-default .navbar-nav > li > a:hover,
 .navbar-default .navbar-nav > li > a:focus {
-  color: #5cb85c;
+  color: #1F87E8;
   background-color: transparent;
 }
 .navbar-default .navbar-nav > .active > a,
 .navbar-default .navbar-nav > .active > a:hover,
 .navbar-default .navbar-nav > .active > a:focus {
-  color: #5cb85c;
+  color: #1F87E8;
   background-color: transparent;
 }
 .navbar-default .navbar-nav > .disabled > a,
@@ -150,7 +152,7 @@ footer{
 }
 .navbar-default .navbar-toggle:hover,
 .navbar-default .navbar-toggle:focus {
-  background-color: #5cb85c;
+  background-color: #1F87E8;
 }
 .navbar-default .navbar-toggle .icon-bar {
   background-color: #888;
@@ -162,7 +164,7 @@ footer{
 .navbar-default .navbar-nav > .open > a,
 .navbar-default .navbar-nav > .open > a:hover,
 .navbar-default .navbar-nav > .open > a:focus {
-  color: #5cb85c;
+  color: #1F87E8;
   background-color: transparent;
 }
 @media (max-width: 767px) {
@@ -171,18 +173,18 @@ footer{
   }
   .navbar-default .navbar-nav .open .dropdown-menu > li > a:hover,
   .navbar-default .navbar-nav .open .dropdown-menu > li > a:focus {
-    color: #5cb85c;
+    color: #1F87E8;
     background-color: transparent;
   }
   .navbar-default .navbar-nav .open .dropdown-menu > .active > a,
   .navbar-default .navbar-nav .open .dropdown-menu > .active > a:hover,
   .navbar-default .navbar-nav .open .dropdown-menu > .active > a:focus {
-    color: #5cb85c;
+    color: #1F87E8;
   }
   .navbar-default .navbar-nav .open .dropdown-menu > .disabled > a,
   .navbar-default .navbar-nav .open .dropdown-menu > .disabled > a:hover,
   .navbar-default .navbar-nav .open .dropdown-menu > .disabled > a:focus {
-    color: #5cb85c;
+    color: #1F87E8;
     background-color: transparent;
   }
 }
@@ -190,20 +192,20 @@ footer{
   color: #777;
 }
 .navbar-default .navbar-link:hover {
-  color: #5cb85c;
+  color: #1F87E8;
 }
 .navbar-default .btn-link {
   color: #777;
 }
 .navbar-default .btn-link:hover,
 .navbar-default .btn-link:focus {
-  color: #5cb85c;
+  color: #1F87E8;
 }
 .navbar-default .btn-link[disabled]:hover,
 fieldset[disabled] .navbar-default .btn-link:hover,
 .navbar-default .btn-link[disabled]:focus,
 fieldset[disabled] .navbar-default .btn-link:focus {
-  color: #5cb85c;
+  color: #1F87E8;
 }
 
 .nav-tel-icon a{
@@ -220,18 +222,77 @@ fieldset[disabled] .navbar-default .btn-link:focus {
     padding-left: 5px !important;
     font-size: 18px;
     font-weight: bold;
-    color: #5cb85c !important;
+    color: #1F87E8 !important;
+}
+
+
+.btn-success {
+    color: #fff;
+    background-color: #1F87E8;
+    border-color: #1F87E8;
+}
+.btn-success:focus,
+.btn-success.focus {
+    color: #fff;
+    background-color: #1977e8;
+    border-color: #1977e8;
+}
+.btn-success:hover {
+    color: #fff;
+    background-color: #1977e8;
+    border-color: #1977e8;
+}
+.btn-success:active,
+.btn-success.active,
+.open > .dropdown-toggle.btn-success {
+    color: #fff;
+    background-color: #1977e8;
+    border-color: #1977e8;
+}
+.btn-success:active:hover,
+.btn-success.active:hover,
+.open > .dropdown-toggle.btn-success:hover,
+.btn-success:active:focus,
+.btn-success.active:focus,
+.open > .dropdown-toggle.btn-success:focus,
+.btn-success:active.focus,
+.btn-success.active.focus,
+.open > .dropdown-toggle.btn-success.focus {
+    color: #fff;
+    background-color: #1977e8;
+    border-color: #1977e8;
+}
+.btn-success:active,
+.btn-success.active,
+.open > .dropdown-toggle.btn-success {
+    background-image: none;
+}
+.btn-success.disabled:hover,
+.btn-success[disabled]:hover,
+fieldset[disabled] .btn-success:hover,
+.btn-success.disabled:focus,
+.btn-success[disabled]:focus,
+fieldset[disabled] .btn-success:focus,
+.btn-success.disabled.focus,
+.btn-success[disabled].focus,
+fieldset[disabled] .btn-success.focus {
+    background-color: #1977e8;
+    border-color: #1977e8;
+}
+.btn-success .badge {
+    color: #1F87E8;
+    background-color: #fff;
 }
 
 .carousel-indicators .active {
     width: 12px;
     height: 12px;
     margin: 0;
-    background-color: #5cb85c;
+    background-color: #1F87E8;
 }
 
 .carousel-indicators li {
-    border: 1px solid #5cb85c;
+    border: 1px solid #1F87E8;
 }
 
 .footer-info-box dl{
