--- a/src/main/webapp/static/css/common.css
+++ b/src/main/webapp/static/css/common.css
@@ -20,21 +20,7 @@ footer{
 /* Special class on .container surrounding .navbar, used for positioning it into place. */
 .navbar-wrapper {
     z-index: 20;
-}
-
-/* Flip around the padding for proper display in narrow viewports */
-.navbar-wrapper > .container {
-    padding-right: 0;
-    padding-left: 0;
     width: auto;
-}
-
-.navbar-wrapper .navbar .container {
-    width: auto;
-}
-
-.navbar{
-    margin-bottom:0px;
 }
 
 .container .navbar-header,
@@ -50,28 +36,36 @@ footer{
 
 /* Undo the collapsing navbar */
 .navbar-collapse {
+    margin: auto;
     display: block !important;
-    height: auto !important;
     padding-bottom: 0;
+    border-top: 0;
     overflow: visible !important;
     visibility: visible !important;
+    background-color: #39BC30;
+}
+.navbar-collapse,.navbar-box,.navbar-box .navbar-nav,.navbar-box .navbar-nav > li,.navbar-box .navbar-nav > li > a{
+    height: 40px !important;
+}
+
+@media (min-width: 768px) {
+    .navbar-collapse.collapse {
+        height: 40px !important;
+    }
 }
 
 .navbar-toggle {
     display: none;
 }
-.navbar-collapse {
-    border-top: 0;
-}
 
-.navbar-brand {
-    margin-left: -15px;
+.navbar-box{
+    background-color: #39BC30;
 }
 
 /* Always apply the floated nav */
 .navbar-nav {
-    float: left;
-    margin: 0;
+    float: none;
+    margin: 0 0 0 260px;
 }
 .navbar-nav > li {
     float: left;
@@ -83,6 +77,10 @@ footer{
 /* Redeclare since we override the float above */
 .navbar-nav.navbar-right {
     float: right;
+}
+.navbar {
+    margin-bottom:0px;
+    border:none;
 }
 
 /* Undo custom dropdowns */
@@ -107,39 +105,49 @@ footer{
   background-color: transparent;
 }
 .navbar-default {
-  border-top: 3px solid #1F87E8;
   box-shadow: 0px 2px 10px 0px rgba(0,0,0,0.1), 0 1px rgba(0,0,0,0.1);
   background: #fafafa;
 }
 .navbar-default .navbar-brand {
-  color: #1F87E8;
-  width: 300px;
-  text-align: center;
+  color: #39BC30;
+  width: 260px;
   font-weight: bold;
   font-size: 35px;
   font-style: italic;
+  margin: 0;
 }
 .navbar-default .navbar-brand:hover,
 .navbar-default .navbar-brand:focus {
-  color: #1F87E8;
+  color: #39BC30;
   background-color: transparent;
 }
-.navbar-default .navbar-text {
-  color: #333;
-}
+
 .navbar-default .navbar-nav > li > a {
-  color: #333;
+  color: #fff;
+}
+.navbar-box .navbar-nav > li > a {
+    font-size: 17px;
+    font-weight: bold;
+}
+.navbar-default .navbar-right > li > a {
+    color: #39BC30;
 }
 .navbar-default .navbar-nav > li > a:hover,
 .navbar-default .navbar-nav > li > a:focus {
-  color: #1F87E8;
-  background-color: transparent;
+  color: #fff;
+    font-weight: bold;
+  background-color: #4ecf5b;
+}
+.navbar-default .navbar-right > li > a:hover,
+.navbar-default .navbar-right > li > a:focus {
+    color: #39BC30;
+    background-color:transparent;
 }
 .navbar-default .navbar-nav > .active > a,
 .navbar-default .navbar-nav > .active > a:hover,
 .navbar-default .navbar-nav > .active > a:focus {
-  color: #1F87E8;
-  background-color: transparent;
+  color: #fff;
+  background-color: #4ecf5b;
 }
 .navbar-default .navbar-nav > .disabled > a,
 .navbar-default .navbar-nav > .disabled > a:hover,
@@ -152,7 +160,7 @@ footer{
 }
 .navbar-default .navbar-toggle:hover,
 .navbar-default .navbar-toggle:focus {
-  background-color: #1F87E8;
+  background-color: #4ecf5b;
 }
 .navbar-default .navbar-toggle .icon-bar {
   background-color: #888;
@@ -164,48 +172,56 @@ footer{
 .navbar-default .navbar-nav > .open > a,
 .navbar-default .navbar-nav > .open > a:hover,
 .navbar-default .navbar-nav > .open > a:focus {
-  color: #1F87E8;
+  color: #fff;
   background-color: transparent;
 }
 @media (max-width: 767px) {
   .navbar-default .navbar-nav .open .dropdown-menu > li > a {
-    color: #777;
+    color: #fff;
   }
   .navbar-default .navbar-nav .open .dropdown-menu > li > a:hover,
   .navbar-default .navbar-nav .open .dropdown-menu > li > a:focus {
-    color: #1F87E8;
+    color: #fff;
     background-color: transparent;
   }
   .navbar-default .navbar-nav .open .dropdown-menu > .active > a,
   .navbar-default .navbar-nav .open .dropdown-menu > .active > a:hover,
   .navbar-default .navbar-nav .open .dropdown-menu > .active > a:focus {
-    color: #1F87E8;
+    color: #fff;
   }
   .navbar-default .navbar-nav .open .dropdown-menu > .disabled > a,
   .navbar-default .navbar-nav .open .dropdown-menu > .disabled > a:hover,
   .navbar-default .navbar-nav .open .dropdown-menu > .disabled > a:focus {
-    color: #1F87E8;
+    color: #fff;
     background-color: transparent;
   }
 }
+
+@media (min-width: 768px) {
+    .navbar-box .navbar-nav > li > a {
+        padding-top: 10px;
+        padding-bottom: 10px;
+    }
+}
+
 .navbar-default .navbar-link {
   color: #777;
 }
 .navbar-default .navbar-link:hover {
-  color: #1F87E8;
+  color: #39BC30;
 }
 .navbar-default .btn-link {
   color: #777;
 }
 .navbar-default .btn-link:hover,
 .navbar-default .btn-link:focus {
-  color: #1F87E8;
+  color: #39BC30;
 }
 .navbar-default .btn-link[disabled]:hover,
 fieldset[disabled] .navbar-default .btn-link:hover,
 .navbar-default .btn-link[disabled]:focus,
 fieldset[disabled] .navbar-default .btn-link:focus {
-  color: #1F87E8;
+  color: #39BC30;
 }
 
 .nav-tel-icon a{
@@ -222,32 +238,32 @@ fieldset[disabled] .navbar-default .btn-link:focus {
     padding-left: 5px !important;
     font-size: 18px;
     font-weight: bold;
-    color: #1F87E8 !important;
+    color: #39BC30 !important;
 }
 
 
 .btn-success {
     color: #fff;
-    background-color: #1F87E8;
-    border-color: #1F87E8;
+    background-color: #39BC30;
+    border-color: #39BC30;
 }
 .btn-success:focus,
 .btn-success.focus {
     color: #fff;
-    background-color: #1977e8;
-    border-color: #1977e8;
+    background-color: #4ecf5b;
+    border-color: #4ecf5b;
 }
 .btn-success:hover {
     color: #fff;
-    background-color: #1977e8;
-    border-color: #1977e8;
+    background-color: #4ecf5b;
+    border-color: #4ecf5b;
 }
 .btn-success:active,
 .btn-success.active,
 .open > .dropdown-toggle.btn-success {
     color: #fff;
-    background-color: #1977e8;
-    border-color: #1977e8;
+    background-color: #4ecf5b;
+    border-color: #4ecf5b;
 }
 .btn-success:active:hover,
 .btn-success.active:hover,
@@ -259,8 +275,8 @@ fieldset[disabled] .navbar-default .btn-link:focus {
 .btn-success.active.focus,
 .open > .dropdown-toggle.btn-success.focus {
     color: #fff;
-    background-color: #1977e8;
-    border-color: #1977e8;
+    background-color: #4ecf5b;
+    border-color: #4ecf5b;
 }
 .btn-success:active,
 .btn-success.active,
@@ -276,8 +292,8 @@ fieldset[disabled] .btn-success:focus,
 .btn-success.disabled.focus,
 .btn-success[disabled].focus,
 fieldset[disabled] .btn-success.focus {
-    background-color: #1977e8;
-    border-color: #1977e8;
+    background-color: #4ecf5b;
+    border-color: #4ecf5b;
 }
 .btn-success .badge {
     color: #1F87E8;
@@ -288,11 +304,11 @@ fieldset[disabled] .btn-success.focus {
     width: 12px;
     height: 12px;
     margin: 0;
-    background-color: #1F87E8;
+    background-color: #4ecf5b;
 }
 
 .carousel-indicators li {
-    border: 1px solid #1F87E8;
+    border: 1px solid #4ecf5b;
 }
 
 .footer-info-box dl{
@@ -316,4 +332,8 @@ fieldset[disabled] .btn-success.focus {
 .footer-info-box>dl>dd>a:hover{
     text-decoration: none;
     color: #93939e;
+}
+
+.pagination>li>a, .pagination>li>span {
+    color: #4ecf5b;
 }
