--- a/src/main/webapp/static/css/index.css
+++ b/src/main/webapp/static/css/index.css
@@ -179,3 +179,42 @@
     width: 363px;
     margin-bottom: 5px;
   }
+
+
+.mapModal .modal-dialog{
+  width: 800px;
+  height: 550px;
+}
+
+.mapModal .modal-body{
+  width: 800px;
+  height: 500px;
+  padding: 5px;
+}
+
+.mapModal .row{
+  margin: 0px;
+}
+
+.mapModal .modal-body .col-md-5{
+  padding: 5px;
+}
+.mapModal .modal-body .col-md-7 {
+  padding: 5px;
+  width: 450px;
+  height: 480px;
+}
+
+.mapModal .list-group{
+  height: 440px;
+  overflow-y: auto;
+  margin-bottom: 0px;
+}
+
+.allmap {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  margin:0;font-family:"微软雅黑";
+}
