--- a/src/main/webapp/static/css/common.css
+++ b/src/main/webapp/static/css/common.css
@@ -42,7 +42,7 @@ footer{
     border-top: 0;
     overflow: visible !important;
     visibility: visible !important;
-    background-color: #39BC30;
+    background-color: #33cc00;
 }
 .navbar-collapse,.navbar-box,.navbar-box .navbar-nav,.navbar-box .navbar-nav > li,.navbar-box .navbar-nav > li > a{
     height: 40px !important;
@@ -59,7 +59,7 @@ footer{
 }
 
 .navbar-box{
-    background-color: #39BC30;
+    background-color: #33cc00;
 }
 
 /* Always apply the floated nav */
@@ -109,16 +109,18 @@ footer{
   background: #fafafa;
 }
 .navbar-default .navbar-brand {
-  color: #39BC30;
+  color: #33cc00;
   width: 260px;
   font-weight: bold;
   font-size: 35px;
   font-style: italic;
+  padding: 0px;
   margin: 0;
 }
 .navbar-default .navbar-brand:hover,
 .navbar-default .navbar-brand:focus {
-  color: #39BC30;
+  padding: 0px;
+  color: #33cc00;
   background-color: transparent;
 }
 
@@ -130,7 +132,7 @@ footer{
     font-weight: bold;
 }
 .navbar-default .navbar-right > li > a {
-    color: #39BC30;
+    color: #33cc00;
 }
 .navbar-default .navbar-nav > li > a:hover,
 .navbar-default .navbar-nav > li > a:focus {
@@ -140,7 +142,7 @@ footer{
 }
 .navbar-default .navbar-right > li > a:hover,
 .navbar-default .navbar-right > li > a:focus {
-    color: #39BC30;
+    color: #33cc00;
     background-color:transparent;
 }
 .navbar-default .navbar-nav > .active > a,
@@ -208,20 +210,20 @@ footer{
   color: #777;
 }
 .navbar-default .navbar-link:hover {
-  color: #39BC30;
+  color: #33cc00;
 }
 .navbar-default .btn-link {
   color: #777;
 }
 .navbar-default .btn-link:hover,
 .navbar-default .btn-link:focus {
-  color: #39BC30;
+  color: #33cc00;
 }
 .navbar-default .btn-link[disabled]:hover,
 fieldset[disabled] .navbar-default .btn-link:hover,
 .navbar-default .btn-link[disabled]:focus,
 fieldset[disabled] .navbar-default .btn-link:focus {
-  color: #39BC30;
+  color: #33cc00;
 }
 
 .nav-tel-icon a{
@@ -238,14 +240,14 @@ fieldset[disabled] .navbar-default .btn-link:focus {
     padding-left: 5px !important;
     font-size: 18px;
     font-weight: bold;
-    color: #39BC30 !important;
+    color: #33cc00 !important;
 }
 
 
 .btn-success {
     color: #fff;
-    background-color: #39BC30;
-    border-color: #39BC30;
+    background-color: #33cc00;
+    border-color: #33cc00;
 }
 .btn-success:focus,
 .btn-success.focus {
@@ -335,5 +337,5 @@ fieldset[disabled] .btn-success.focus {
 }
 
 .pagination>li>a, .pagination>li>span {
-    color: #4ecf5b;
+    color: #33cc00;
 }
