--- a/src/main/webapp/static/css/index.css
+++ b/src/main/webapp/static/css/index.css
@@ -126,13 +126,13 @@
     border-radius: 0;
   }
   .nav-tabs > li > a:hover {
-    color: #39BC30;
-    border-top: 2px #39BC30 solid;
+    color: #33cc00;
+    border-top: 2px #33cc00 solid;
     background-color: transparent;
   }
   .nav-tabs>li.active>a, .nav-tabs>li.active>a:focus, .nav-tabs>li.active>a:hover {
-    color: #39BC30;
-    border-top: 2px #39BC30 solid;
+    color: #33cc00;
+    border-top: 2px #33cc00 solid;
   }
   
   .marketing{
