--- a/src/main/webapp/static/css/login.css
+++ b/src/main/webapp/static/css/login.css
@@ -1,25 +1,48 @@
 .login-box{
-    height: 500px;
+    height: 400px;
     width: 100%;
     background-color: #ccc;
 }
+
+.login-tab-box{
+    height: 50px;
+    margin-bottom: 10px;
+}
+
+.login-tab-box h2{
+    float: left;
+    margin: 0;
+    line-height: 50px;
+    width: 50%;
+    text-align: center;
+    font-size: 20px;
+    cursor: pointer;
+}
+.login-tab-box .active {
+    border-bottom: 1px solid #e4e6e9;
+    border-left: 1px solid #e4e6e9;
+    background-color: #f3f4f6;
+}
+
 .form-signin{
-    width: 400px;
+    width: 350px;
     display: block;
     position: absolute;
     right: 50px;
     top: 130px;
     background-color: #fff;
-    height: 350px;
-    padding: 15px 30px 15px 30px;
+    height: 300px;
 }
-.form-signin .form-control{
+.login-content-box{
+    padding: 15px;
+}
+.login-content-box .form-control{
     margin-bottom: 20px;
     height: 45px;
 }
-.form-signin button{
+.login-content-box button{
     border-radius: 0;
 }
-.form-signin .checkbox {
+.login-content-box .checkbox {
     margin-top: 20px;
 }
