--- a/src/main/webapp/static/css/login.css
+++ b/src/main/webapp/static/css/login.css
@@ -2,6 +2,7 @@
     height: 400px;
     width: 100%;
     background-color: #ccc;
+    position: relative;
 }
 
 .login-tab-box{
@@ -29,7 +30,7 @@
     display: block;
     position: absolute;
     right: 50px;
-    top: 130px;
+    top: 50px;
     background-color: #fff;
     height: 300px;
 }
