--- a/src/main/webapp/static/css/login.css
+++ b/src/main/webapp/static/css/login.css
@@ -1,7 +1,7 @@
 .login-box{
     height: 400px;
     width: 100%;
-    background-color: #ccc;
+    background-color: #fff;
     position: relative;
 }
 
@@ -20,9 +20,19 @@
     cursor: pointer;
 }
 .login-tab-box .active {
-    border-bottom: 1px solid #e4e6e9;
-    border-left: 1px solid #e4e6e9;
-    background-color: #f3f4f6;
+    color: #fff;
+    background-color: #33cc00;
+}
+
+.login-banner{
+    width: 750px;
+    text-align: center;
+    margin-top: 55px;
+}
+
+.login-banner img{
+    width: 600px;
+    height: 300px;
 }
 
 .form-signin{
@@ -31,7 +41,7 @@
     position: absolute;
     right: 50px;
     top: 50px;
-    background-color: #fff;
+    background-color: #f2f2f2;
     height: 300px;
 }
 .login-content-box{
