--- a/src/main/webapp/static/css/index.css
+++ b/src/main/webapp/static/css/index.css
@@ -13,12 +13,17 @@
   height: 450px;
   background-color: #777;
 }
-.carousel-inner > .item > img {
+.carousel-item-a {
+  display: block;
   position: absolute;
   top: 0;
   left: 0;
   min-width: 100%;
   height: 450px;
+  background-position: center center;
+  overflow: hidden;
+  background-size: auto 100%;
+  background-repeat: no-repeat;
 }
 
 /* MARKETING CONTENT
